correction scroll to top button add z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -322,6 +322,7 @@ section {
     transition: opacity 0.3s ease-in-out;
     width: 1.5em;
     height: 3em;
+    z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
